added video cards

--- a/youtube_clone_app/pubspec.yaml
+++ b/youtube_clone_app/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   fluentui_icons: ^1.0.0
   gap:
+  sticky_headers: ^0.3.0+2
+  modal_bottom_sheet: ^2.1.2
 
 dev_dependencies:
   flutter_test:
