--- a/youtube_clone_app/pubspec.yaml
+++ b/youtube_clone_app/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   gap:
   sticky_headers: ^0.3.0+2
   modal_bottom_sheet: ^2.1.2
+  dio: ^5.1.1
+  http: ^0.13.6
 
 dev_dependencies:
   flutter_test:
